euphony-dsp/src/snapshots/euphony_dsp__binary__Add.snap
---
source: euphony-dsp/src/binary.rs
expression: node
---
Node {
    name: "Add",
    module: [
        "binary",
    ],
    impl_path: "euphony_dsp::binary",
    id: 50,
    inputs: [
        Input {
            name: "rhs",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "lhs",
            id: 1,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Adds two signals together\n",
    fork: None,
}
