euphony-dsp/src/snapshots/euphony_dsp__binary__Atan2.snap
---
source: euphony-dsp/src/binary.rs
expression: node
---
Node {
    name: "Atan2",
    module: [
        "binary",
    ],
    impl_path: "euphony_dsp::binary",
    id: 51,
    inputs: [
        Input {
            name: "rhs",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "lhs",
            id: 1,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Computes the four quadrant arctangent of `lhs` (`y`) and `rhs` (`x`) in radians.\n\n * `x = 0`, `y = 0`: `0`\n * `x >= 0`: `arctan(y/x)` -> `[-pi/2, pi/2]`\n * `y >= 0`: `arctan(y/x) + pi` -> `(pi/2, pi]`\n * `y < 0`: `arctan(y/x) - pi` -> `(-pi, -pi/2)`\n",
    fork: None,
}
