euphony-dsp/src/snapshots/euphony_dsp__binary__Copysign.snap
---
source: euphony-dsp/src/binary.rs
assertion_line: 64
expression: node
---
Node {
    name: "Copysign",
    module: [
        "binary",
    ],
    impl_path: "euphony_dsp::binary",
    id: 52,
    inputs: [
        Input {
            name: "rhs",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "lhs",
            id: 1,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Returns a number composed of the magnitude of `lhs` and the sign of `rhs`.\n\n Equal to `lhs` if the sign of `lhs` and `rhs` are the same, otherwise equal\n to `-lhs`. If `lhs` is a `NAN`, then a `NAN` with the sign of `rhs` is returned.\n",
}
