euphony-dsp/src/snapshots/euphony_dsp__binary__Div.snap
---
source: euphony-dsp/src/binary.rs
expression: node
---
Node {
    name: "Div",
    module: [
        "binary",
    ],
    impl_path: "euphony_dsp::binary",
    id: 53,
    inputs: [
        Input {
            name: "rhs",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "lhs",
            id: 1,
            trigger: false,
            default: 0.0,
        },
    ],
    docs: " Divides the left hand signal by the right\n",
}
