euphony-dsp/src/snapshots/euphony_dsp__binary__Hypot.snap
---
source: euphony-dsp/src/binary.rs
assertion_line: 88
expression: node
---
Node {
    name: "Hypot",
    module: [
        "binary",
    ],
    impl_path: "euphony_dsp::binary",
    id: 55,
    inputs: [
        Input {
            name: "rhs",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "lhs",
            id: 1,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Calculates the length of the hypotenuse of a right-angle triangle given legs of length `x` and `y`.\n",
}
