euphony-dsp/src/snapshots/euphony_dsp__binary__Log.snap
---
source: euphony-dsp/src/binary.rs
assertion_line: 94
expression: node
---
Node {
    name: "Log",
    module: [
        "binary",
    ],
    impl_path: "euphony_dsp::binary",
    id: 56,
    inputs: [
        Input {
            name: "rhs",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "lhs",
            id: 1,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Returns the logarithm of the number with respect to an arbitrary base.\n\n The result might not be correctly rounded owing to implementation details;\n `self.log2()` can produce more accurate results for base 2, and `self.log10()` can produce\n more accurate results for base 10.\n",
}
